welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:14: error: not found: value biscuits
while (2*biscuits!=caseOrange) {
         ^RunHalf:14: error: not found: value caseOrange
while (2*biscuits!=caseOrange) {
                   ^RunHalf:17: error: not found: value biscuits
    biscuits=biscuits+1
    ^RunHalf:20: error: not found: value caseOrange
    caseOrange=caseOrange+1
    ^