welcome.lessons.welcome.variables.RunHalf.scala.code
avance()
if (estSurBiscuit) {
  var biscuits = 1
} else {
  var biscuits = 0
}

if (estSurOrange) {
  var caseOrange = 1
} else {
  var caseOrange = 0
}

while (2*biscuits!=caseOrange) {
  avance()
  if (estSurBiscuit()) {
    biscuits=biscuits+1
  }
  if (estSurOrange()) {
    caseOrange=caseOrange+1
  }
}